--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -3,8 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <title>Main Page</title>
+    <script>
+        let token = '';
+    </script>
 </head>
 <body>
 Hello, {{user}}!
+<form
+    onsubmit="
+    let payload = {
+        method: 'post',
+        headers: {
+            'Content-Type': 'application/x-www-form-urlencoded'
+        },
+        body: 'username=${this.username.value}&password=${this.password.value}'
+    };
+    fetch('/login', payload).then(resp => resp.text()).then(text => console.log(text));
+    return false;
+"
+>
+    <input type="text" name="username">
+    <input type="password" name="password">
+    <input type="submit" value="Sign in">
+</form>
+
+<input type="button" value="controller" onclick="
+    fetch(
+        '/controller',
+        {
+            headers: {
+                'Authorization': 'Bearer ${token}'
+            }
+        }
+    ).then(resp => resp.json()).then(console.log)
+">
+<input type="button" value="hello" onclick="
+    fetch(
+        '/hello',
+        {
+            headers: {
+                'Authorization': 'Bearer ${token}'
+            }
+        }
+    ).then(resp => resp.json()).then(console.log)
+">
 </body>
 </html>
